load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "keepalive.go",
        "service.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/go:geniex_bridge",
        "//cli/internal/config",
        "//cli/internal/store",
        "//cli/internal/types",
        "//cli/server/utils",
    ],
)
