load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:resolve go github.com/qcom-it-nexa-ai/GenieX/geniex-sdk-bindings/go //geniex-sdk-bindings/go:go

go_library(
    name = "geniex-cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/qcom-it-nexa-ai/GenieX/geniex-cli/cmd/geniex-cli",
    visibility = ["//visibility:private"],
    deps = [
        "//geniex-cli/internal/config",
        "//geniex-sdk-bindings/go",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "geniex-cli",
    embed = [":geniex-cli_lib"],
    visibility = ["//visibility:public"],
)
