load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

COMMON_COPTS = select({
    "//sdk:windows": ["/std:c++17", "/utf-8"],
    "//conditions:default": ["-std=c++17"],
})

cc_library(
    name = "headers",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
    deps = ["//sdk/include:headers"],
)

filegroup(
    name = "srcs",
    srcs = glob(["src/*.cpp"]),
)

cmake(
    name = "llama_cpp_foreign",
    lib_source = "@llama_cpp_src//:srcs",
    build_args = ["-j16"],
    cache_entries = {
        "BUILD_SHARED_LIBS": "ON",
        "CMAKE_BUILD_TYPE": "Release",
        "GGML_CCACHE": "OFF",
        "LLAMA_BUILD_COMMON": "ON",
        "LLAMA_BUILD_EXAMPLES": "OFF",
        "LLAMA_BUILD_SERVER": "OFF",
        "LLAMA_BUILD_TESTS": "OFF",
        "LLAMA_BUILD_TOOLS": "OFF",
    },
    out_shared_libs = [
        "libggml-base.so.0",
        "libggml-cpu.so.0",
        "libggml.so.0",
        "libllama.so.0",
    ],
)

cc_library(
    name = "llama_cpp",
    deps = [
        ":llama_cpp_foreign",
        "@llama_cpp_src//:headers",
    ],
)

cc_library(
    name = "plugin_lib",
    srcs = [":srcs"],
    copts = COMMON_COPTS,
    defines = [
        "GENIEX_DL",
        "ML_SHARED",
    ],
    deps = [
        ":headers",
        ":llama_cpp",
        "//sdk/include:headers",
        "//sdk/src:geniex_lib",
    ],
)

cc_binary(
    name = "geniex_plugin",
    deps = [":plugin_lib"],
    linkshared = True,
    linkstatic = False,
)
