load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load(":artifacts.bzl", "WINDOWS_BACKEND_RUNTIME_FILES", "artifact_labels", "windows_copy_cmd")

package(default_visibility = ["//visibility:public"])

exports_files([
    "build_llama_cpp.bat",
    "build_llama_cpp.sh",
])

COMMON_COPTS = select({
    "//conditions:default": ["-std=c++17"],
})

COMMON_DEFINES = select({
    "//sdk:windows": [
        "_CRT_SECURE_NO_WARNINGS",
        "_WIN32_WINNT=0x0A00",
        "WIN32_LEAN_AND_MEAN",
        "NOMINMAX",
    ],
    "//conditions:default": [],
}) + [
    "GENIEX_DL",
]

DEBUG_DEFINES = select({
    "//sdk:enable_geniex_debug": ["GENIEX_DEBUG"],
    "//conditions:default": [],
})

cc_library(
    name = "headers",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
    deps = [
        "//sdk/include:headers",
        "@llama_cpp_src//:headers",
    ],
)

cc_library(
    name = "plugin_lib",
    srcs = glob(["src/*.cpp"]) + ["//sdk/src:srcs"],
    copts = COMMON_COPTS,
    defines = COMMON_DEFINES + DEBUG_DEFINES,
    linkopts = select({
        "//sdk:windows": ["Advapi32.lib", "ws2_32.lib"],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":headers",
        "@llama_cpp_src//:common",
        "@llama_cpp_src//:ggml",
        "@llama_cpp_src//:llama",
        "@llama_cpp_src//:mtmd",
    ],
)

genrule(
    name = "backend_runtime_files",
    srcs = select({
        "//sdk:windows": artifact_labels("@llama_cpp_src//", WINDOWS_BACKEND_RUNTIME_FILES),
        "//conditions:default": [],
    }),
    outs = WINDOWS_BACKEND_RUNTIME_FILES,
    cmd_bash = "for f in $(OUTS); do : > \"$$f\"; done",
    cmd_bat = windows_copy_cmd("@llama_cpp_src//", WINDOWS_BACKEND_RUNTIME_FILES),
)

cc_binary(
    name = "geniex_plugin",
    srcs = glob(["src/*.cpp"]) + ["//sdk/src:srcs"],
    copts = COMMON_COPTS,
    data = select({
        "//sdk:windows": [":backend_runtime_files"],
        "//conditions:default": [],
    }) + [
        "@llama_cpp_src//:runtime_dlls",
    ],
    defines = COMMON_DEFINES + DEBUG_DEFINES,
    linkopts = select({
        "//sdk:windows": ["Advapi32.lib", "ws2_32.lib"],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":headers",
        "@llama_cpp_src//:common",
        "@llama_cpp_src//:ggml",
        "@llama_cpp_src//:llama",
        "@llama_cpp_src//:mtmd",
    ],
    linkshared = True,
    linkstatic = False,
)

alias(
    name = "geniex_llama_cpp",
    actual = ":geniex_plugin",
)
