load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(["build_llama_cpp.bat"])

COMMON_COPTS = select({
    "//sdk:windows": ["/std:c++17", "/utf-8"],
    "//conditions:default": ["-std=c++17"],
})

COMMON_DEFINES = select({
    "//sdk:windows": [
        "_CRT_SECURE_NO_WARNINGS",
        "_WIN32_WINNT=0x0A00",
        "WIN32_LEAN_AND_MEAN",
        "NOMINMAX",
    ],
    "//conditions:default": [],
}) + [
    "GENIEX_DL",
]

cc_library(
    name = "headers",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
    deps = [
        "//sdk/include:headers",
        "@llama_cpp_src//:headers",
    ],
)

cc_library(
    name = "plugin_lib",
    srcs = glob(["src/*.cpp"]) + ["//sdk/src:srcs"],
    copts = COMMON_COPTS,
    defines = COMMON_DEFINES,
    linkopts = select({
        "//sdk:windows": ["Advapi32.lib", "ws2_32.lib"],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":headers",
        "@llama_cpp_src//:common",
        "@llama_cpp_src//:ggml",
        "@llama_cpp_src//:llama",
        "@llama_cpp_src//:mtmd",
    ],
)

genrule(
    name = "backend_runtime_files",
    srcs = [
        "@llama_cpp_src//:ggml-opencl.dll",
        "@llama_cpp_src//:ggml-hexagon.dll",
        "@llama_cpp_src//:libggml-htp-v68.so",
        "@llama_cpp_src//:libggml-htp-v69.so",
        "@llama_cpp_src//:libggml-htp-v73.so",
        "@llama_cpp_src//:libggml-htp-v75.so",
        "@llama_cpp_src//:libggml-htp-v79.so",
        "@llama_cpp_src//:libggml-htp-v81.so",
        "@llama_cpp_src//:libggml-htp.cat",
    ],
    outs = [
        "ggml-opencl.dll",
        "ggml-hexagon.dll",
        "libggml-htp-v68.so",
        "libggml-htp-v69.so",
        "libggml-htp-v73.so",
        "libggml-htp-v75.so",
        "libggml-htp-v79.so",
        "libggml-htp-v81.so",
        "libggml-htp.cat",
    ],
    cmd_bat = "copy /Y \"$(location @llama_cpp_src//:ggml-opencl.dll)\" \"$(@D)\\ggml-opencl.dll\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:ggml-hexagon.dll)\" \"$(@D)\\ggml-hexagon.dll\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:libggml-htp-v68.so)\" \"$(@D)\\libggml-htp-v68.so\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:libggml-htp-v69.so)\" \"$(@D)\\libggml-htp-v69.so\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:libggml-htp-v73.so)\" \"$(@D)\\libggml-htp-v73.so\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:libggml-htp-v75.so)\" \"$(@D)\\libggml-htp-v75.so\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:libggml-htp-v79.so)\" \"$(@D)\\libggml-htp-v79.so\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:libggml-htp-v81.so)\" \"$(@D)\\libggml-htp-v81.so\" >NUL && " +
              "copy /Y \"$(location @llama_cpp_src//:libggml-htp.cat)\" \"$(@D)\\libggml-htp.cat\" >NUL",
)

cc_binary(
    name = "geniex_plugin",
    data = [
        ":backend_runtime_files",
        "@llama_cpp_src//:runtime_dlls",
    ],
    deps = [":plugin_lib"],
    linkshared = True,
    linkstatic = False,
)

alias(
    name = "geniex_llama_cpp",
    actual = ":geniex_plugin",
)
