load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cmake_srcs",
    srcs = glob([
        "**",
    ], exclude = [
        ".git/**",
        "build/**",
        "cmake-out/**",
        "cmake-out-bazel-debug*/**",
    ], allow_empty = True),
)

genrule(
    name = "cmake_build",
    srcs = [
        "CMakeLists.txt",
        ":cmake_srcs",
        "@//sdk/plugins/llama_cpp:build_llama_cpp.bat",
        "@//sdk/cmake:arm64-windows-llvm.cmake",
    ],
    outs = [
        "common.lib",
        "cpp-httplib.lib",
        "ggml-base.dll",
        "ggml-base.lib",
        "ggml-cpu.dll",
        "ggml-cpu.lib",
        "ggml.dll",
        "ggml.lib",
        "ggml-opencl.dll",
        "ggml-opencl.lib",
        "ggml-hexagon.dll",
        "ggml-hexagon.lib",
        "libggml-htp-v68.so",
        "libggml-htp-v69.so",
        "libggml-htp-v73.so",
        "libggml-htp-v75.so",
        "libggml-htp-v79.so",
        "libggml-htp-v81.so",
        "libggml-htp.cat",
        "llama.dll",
        "llama.lib",
        "mtmd.dll",
        "mtmd.lib",
    ],
    cmd_bash = "echo 'llama.cpp cmake_build is only wired for Windows currently' >&2; exit 1",
    cmd_bat = "$(location @//sdk/plugins/llama_cpp:build_llama_cpp.bat) $(location CMakeLists.txt) $(location @//sdk/cmake:arm64-windows-llvm.cmake) $(@D)",
)

cc_library(
    name = "headers",
    hdrs = glob([
        "common/**/*.h",
        "common/**/*.hpp",
        "ggml/include/**/*.h",
        "ggml/include/**/*.hpp",
        "ggml/src/**/*.h",
        "ggml/src/**/*.hpp",
        "include/**/*.h",
        "include/**/*.hpp",
        "src/**/*.h",
        "src/**/*.hpp",
        "tools/mtmd/**/*.h",
        "tools/mtmd/**/*.hpp",
        "vendor/**/*.h",
        "vendor/**/*.hpp",
    ], allow_empty = True),
    includes = [
        "common",
        "ggml/include",
        "ggml/src",
        "ggml/src/ggml-cpu",
        "include",
        "src",
        "tools/mtmd",
        "vendor",
    ],
)

cc_import(
    name = "cpp_httplib",
    static_library = "cpp-httplib.lib",
)

cc_import(
    name = "ggml_base",
    interface_library = "ggml-base.lib",
    shared_library = "ggml-base.dll",
)

cc_import(
    name = "ggml",
    interface_library = "ggml.lib",
    shared_library = "ggml.dll",
    deps = [":ggml_base"],
)

cc_import(
    name = "ggml_cpu",
    interface_library = "ggml-cpu.lib",
    shared_library = "ggml-cpu.dll",
    deps = [":ggml"],
)

cc_import(
    name = "llama",
    interface_library = "llama.lib",
    shared_library = "llama.dll",
    deps = [
        ":ggml",
        ":ggml_cpu",
    ],
)

cc_import(
    name = "common",
    static_library = "common.lib",
    deps = [
        ":cpp_httplib",
        ":llama",
    ],
)

cc_import(
    name = "mtmd",
    interface_library = "mtmd.lib",
    shared_library = "mtmd.dll",
    deps = [
        ":common",
        ":llama",
    ],
)

filegroup(
    name = "runtime_dlls",
    srcs = [
        "ggml-base.dll",
        "ggml-cpu.dll",
        "ggml.dll",
        "ggml-opencl.dll",
        "ggml-hexagon.dll",
        "libggml-htp-v68.so",
        "libggml-htp-v69.so",
        "libggml-htp-v73.so",
        "libggml-htp-v75.so",
        "libggml-htp-v79.so",
        "libggml-htp-v81.so",
        "libggml-htp.cat",
        "llama.dll",
        "mtmd.dll",
    ],
)
