load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")
load(
    "@//sdk/plugins/llama_cpp:artifacts.bzl",
    "ALL_CMAKE_OUTS",
    "LINUX_RUNTIME_DLLS",
    "WINDOWS_RUNTIME_DLLS",
)

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cmake_srcs",
    srcs = glob([
        "**",
    ], exclude = [
        ".git/**",
        "build/**",
        "cmake-out/**",
        "cmake-out-bazel-debug*/**",
    ], allow_empty = True),
)

genrule(
    name = "cmake_build",
    srcs = [
        "CMakeLists.txt",
        ":cmake_srcs",
        "@//sdk/plugins/llama_cpp:build_llama_cpp.bat",
        "@//sdk/plugins/llama_cpp:build_llama_cpp.sh",
        "@//sdk/cmake:arm64-linux-gnu.cmake",
        "@//sdk/cmake:arm64-windows-llvm.cmake",
    ],
    outs = ALL_CMAKE_OUTS,
    cmd_bash = "$(location @//sdk/plugins/llama_cpp:build_llama_cpp.sh) $(location CMakeLists.txt) $(location @//sdk/cmake:arm64-linux-gnu.cmake) $(@D)",
    cmd_bat = "$(location @//sdk/plugins/llama_cpp:build_llama_cpp.bat) $(location CMakeLists.txt) $(location @//sdk/cmake:arm64-windows-llvm.cmake) $(@D)",
)

cc_library(
    name = "headers",
    hdrs = glob([
        "common/**/*.h",
        "common/**/*.hpp",
        "ggml/include/**/*.h",
        "ggml/include/**/*.hpp",
        "ggml/src/**/*.h",
        "ggml/src/**/*.hpp",
        "include/**/*.h",
        "include/**/*.hpp",
        "src/**/*.h",
        "src/**/*.hpp",
        "tools/mtmd/**/*.h",
        "tools/mtmd/**/*.hpp",
        "vendor/**/*.h",
        "vendor/**/*.hpp",
    ], allow_empty = True),
    includes = [
        "common",
        "ggml/include",
        "ggml/src",
        "ggml/src/ggml-cpu",
        "include",
        "src",
        "tools/mtmd",
        "vendor",
    ],
)

cc_import(
    name = "cpp_httplib",
    static_library = select({
        "@//sdk:windows": "cpp-httplib.lib",
        "//conditions:default": "libcpp-httplib.a",
    }),
)

cc_import(
    name = "ggml_base",
    interface_library = select({
        "@//sdk:windows": "ggml-base.lib",
        "//conditions:default": "libggml-base.so",
    }),
    shared_library = select({
        "@//sdk:windows": "ggml-base.dll",
        "//conditions:default": "libggml-base.so",
    }),
)

cc_import(
    name = "ggml",
    interface_library = select({
        "@//sdk:windows": "ggml.lib",
        "//conditions:default": "libggml.so",
    }),
    shared_library = select({
        "@//sdk:windows": "ggml.dll",
        "//conditions:default": "libggml.so",
    }),
    deps = [":ggml_base"],
)

cc_import(
    name = "ggml_cpu",
    interface_library = select({
        "@//sdk:windows": "ggml-cpu.lib",
        "//conditions:default": "libggml-cpu.so",
    }),
    shared_library = select({
        "@//sdk:windows": "ggml-cpu.dll",
        "//conditions:default": "libggml-cpu.so",
    }),
    deps = [":ggml"],
)

cc_import(
    name = "llama",
    interface_library = select({
        "@//sdk:windows": "llama.lib",
        "//conditions:default": "libllama.so",
    }),
    shared_library = select({
        "@//sdk:windows": "llama.dll",
        "//conditions:default": "libllama.so",
    }),
    deps = [
        ":ggml",
        ":ggml_cpu",
    ],
)

cc_import(
    name = "common",
    static_library = select({
        "@//sdk:windows": "common.lib",
        "//conditions:default": "libcommon.a",
    }),
    deps = [
        ":cpp_httplib",
        ":llama",
    ],
)

cc_import(
    name = "mtmd",
    interface_library = select({
        "@//sdk:windows": "mtmd.lib",
        "//conditions:default": "libmtmd.so",
    }),
    shared_library = select({
        "@//sdk:windows": "mtmd.dll",
        "//conditions:default": "libmtmd.so",
    }),
    deps = [
        ":common",
        ":llama",
    ],
)

filegroup(
    name = "runtime_dlls",
    srcs = select({
        "@//sdk:windows": WINDOWS_RUNTIME_DLLS,
        "//conditions:default": LINUX_RUNTIME_DLLS,
    }),
)
