load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

COMMON_COPTS = select({
    "//sdk:windows": ["/std:c++17", "/utf-8"],
    "//conditions:default": ["-std=c++17"],
})

COMMON_DEFINES = [
    "DOCTEST_CONFIG_IMPLEMENT",
    "GENIEX_DL",
    "ML_SHARED",
]

MODEL_TESTS = [
    "asr",
    "cv",
    "device",
    "diarize",
    "embedding",
    "image-gen",
    "llm",
    "rerank",
    "tts",
    "vlm",
]

MODEL_TEST_TARGETS = ["geniex_test_%s" % suite for suite in MODEL_TESTS]

[
    cc_test(
        name = "geniex_test_%s" % suite,
        srcs = ["%s.cpp" % suite],
        copts = COMMON_COPTS,
        defines = COMMON_DEFINES,
        linkopts = select({
            "//sdk:windows": [],
            "//conditions:default": ["-ldl"],
        }),
        tags = ["manual", "integration"],
        deps = [
            "//sdk/src:geniex_lib",
            "//sdk/tests:headers",
        ],
    )
    for suite in MODEL_TESTS
]

cc_test(
    name = "geniex_test_version",
    srcs = ["version.cpp"],
    copts = COMMON_COPTS,
    defines = COMMON_DEFINES,
    linkopts = select({
        "//sdk:windows": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//sdk/src:geniex_lib",
        "//sdk/tests:headers",
    ],
)

test_suite(
    name = "all_tests",
    tests = MODEL_TEST_TARGETS + ["geniex_test_version"],
)
